# easy-otp

./: Cargo.toml
src/: init.rs  main.rs  otp.rs
