[package]
edition = "2021"
name = "easy-otp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
clipboard = "0.5.0"
dirs = "4.0.0"
hex-literal = "0.3.4"
hmac = "0.12.1"
serde = {version = "1.0.143", features = ["derive"]}
sha1 = "0.10.1"
toml = "0.5.9"
